# solana-programs-kit

./: .gitignore  CONTRACT_GUIDE.md  README.md  STRUCTURE.md  copy_contracts.sh  get_sol.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/anchor-idl/: checking-accounts-idl.ts  counter-keypair.json  counter.json  cpi-idl.ts  create-account-idl.ts  favorites-idl.ts  favorites.json  idl.json  idl.ts  swap_program.json  token-swap-idl.ts  token-swap-types.ts  token-swap.json  token_swap.json  token_swap.ts  token_swap_amm.json  transfer-sol-idl.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/amm/: page.tsx
frontend/app/checking-accounts/: page.tsx
frontend/app/counter/: page.tsx
frontend/app/cpi/: page.tsx
frontend/app/create-account/: page.tsx
frontend/app/favorites/: page.tsx
frontend/app/swap/: page.tsx
frontend/app/swap-program/: page.tsx
frontend/app/token-swap/: page.tsx
frontend/app/token-swap-amm/: page.tsx
frontend/app/transfer-sol/: page.tsx
frontend/components/: AssetCard.tsx  CoreProgramsDemo.tsx  Navigation.tsx  Navigation.tsx.backup  ProgramContext.tsx  ProgramSidebar.tsx  SwapAssetCard.tsx  SwapCard.tsx  SwapCardComponent.tsx  TokenProgramDemo.tsx  WalletBalance.tsx  WalletRequired.tsx
frontend/components/amm/: CreateAMMForm.tsx  CreatePoolForm.tsx  DepositLiquidityForm.tsx  TokenSwapForm.tsx  WithdrawLiquidityForm.tsx
frontend/components/checking-accounts/: CheckingAccountsCard.tsx
frontend/components/counter/: AirdropButton.tsx  BalanceDisplay.tsx  CounterCard.tsx  CounterDisplay.tsx  DecrementButton.tsx  IncrementButton.tsx  ToastContent.tsx  TransferToCliButton.tsx  WalletAddress.tsx  WalletButton.tsx
frontend/components/cpi/: CpiCard.tsx
frontend/components/create-account/: CreateAccountCard.tsx
frontend/components/favorites/: FavoritesCard.tsx
frontend/components/provider/: Solana.tsx
frontend/components/token-swap/: CreateAmmForm.tsx  CreatePoolForm.tsx  DepositLiquidity.tsx  LiquidityForm.tsx  SwapForm.tsx  TokenSwapCard.tsx  WithdrawLiquidity.tsx
frontend/components/transfer-sol/: TransferSolCard.tsx
frontend/hooks/: useSwapProgram.tsx  useTokenSwapProgram.tsx
frontend/lib/: core-programs.ts  mantine.ts  swap-assets.ts  token-swap-constants.ts  token-swap-utils.ts  useSwapProgram.ts  useTokenSwapProgram.ts
frontend/stores/: useAssetsStore.ts
programs/: README.md
programs/checking-accounts/: Anchor.toml
programs/clockwork/: Anchor.toml  Cargo.toml
programs/clockwork/src/: lib.rs
programs/counter-program/: Anchor.toml  pnpm-lock.yaml
programs/cpi/: Anchor.toml
programs/cpi/tests/: cpi.ts
programs/create-account/: Anchor.toml
programs/drift/: Anchor.toml  Cargo.toml
programs/drift/src/: lib.rs
programs/favorites/: Anchor.toml
programs/mango/: Anchor.toml  Cargo.toml
programs/mango/src/: lib.rs
programs/marginfi/: Anchor.toml  Cargo.toml
programs/merkle-distributor/: Anchor.toml  Cargo.toml
programs/merkle-distributor/src/: lib.rs
programs/multisig/: Anchor.toml
programs/openbook-twap/: Anchor.toml  Cargo.toml
programs/openbook-twap/src/: lib.rs
programs/openbook-v2/: Anchor.toml  Cargo.toml
programs/paystream-matching-engine/: Anchor.toml  Cargo.toml  README.md
programs/paystream-matching-engine/src/: lib.rs
programs/paystream-matching-engine/tests/: test_paystream.rs
programs/phoenix/: Anchor.toml  Cargo.toml
programs/phoenix/src/: lib.rs
programs/price-oracle/: Anchor.toml
programs/price-oracle/programs/price-oracle/: Cargo.toml
programs/price-oracle/programs/price-oracle/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/price-oracle/programs/price-oracle/src/instructions/: get_twap.rs  initialize.rs  mod.rs  update.rs
programs/raydium-clmm/: Anchor.toml  Cargo.toml
programs/single-pool-staking/: Anchor.toml  Cargo.toml
programs/single-pool-staking/src/: lib.rs
programs/stake-pool/: Anchor.toml  Cargo.toml
programs/token-staking/: Anchor.toml
programs/token-staking/programs/token-staking/: Cargo.toml
programs/token-staking/programs/token-staking/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/token-staking/programs/token-staking/src/instructions/: claim_rewards.rs  fund_rewards.rs  initialize_pool.rs  mod.rs  stake.rs  unstake.rs
programs/token-swap/: Anchor.toml  Cargo.toml
programs/token-vesting/: Anchor.toml  Cargo.toml
programs/transfer-sol-program/: Anchor.toml
programs/whirlpools/: Anchor.toml  Cargo.toml
(+79 files in other folders)
