[package]
name = "single-pool-staking"
version = "0.1.0"
description = "Single Pool Token Staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "single_pool_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
