[package]
name = "price-oracle"
version = "0.1.0"
description = "Time-weighted average price oracle for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "price_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
